<resources>
    <string-array
        name="bodyType">
        <item name="empty">@string/no_value</item>
        <item name="average">@string/average</item>
        <item name="few_extra">@string/few_extra</item>
        <item name="athletic">@string/athletic</item>
        <item name="slim">@string/slim</item>
        <item name="strong">@string/strong</item>
        <item name="obesity">@string/obesity</item>
    </string-array>
    <string name="average">Middle</string>
    <string name="few_extra">Fat</string>
    <string name="athletic">Sport</string>
    <string name="slim">Strong</string>
    <string name="strong">Power</string>
    <string name="obesity">Quite fat</string>
    <string-array
        name="eyeColor">
        <item name="empty">@string/no_value</item>
        <item name="brown">@string/brown</item>
        <item name="gray">@string/gray</item>
        <item name="green">@string/green</item>
        <item name="blue">@string/blue</item>
        <item name="light_blue">@string/light_blue</item>
    </string-array>
    <string name="brown">Brown</string>
    <string name="gray">Grey</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="light_blue">Light-grey</string>
    <string-array
        name="hairColor">
        <item name="empty">@string/no_value</item>
        <item name="black">@string/black</item>
        <item name="brown">@string/brown_hair</item>
        <item name="red">@string/red</item>
        <item name="light">@string/light</item>
        <item name="FEW_GRAY">@string/few_gray</item>
        <item name="grizzle">@string/grizzle</item>
        <item name="shave">@string/shave</item>
        <item name="painted">@string/painted</item>
        <item name="hairless">@string/hairless</item>
    </string-array>
    <string name="black">Black</string>
    <string name="brown_hair">Brown</string>
    <string name="red">Foxy</string>
    <string name="light">Blonde</string>
    <string name="few_gray">Grey</string>
    <string name="grizzle">White</string>
    <string name="shave">Bald</string>
    <string name="painted">Painted</string>
    <string name="hairless">Baldheaded</string>
    <string-array

        name="livingWith">
        <item name="empty">@string/no_value</item>
        <item name="LIVING_WITH_PARENTS">@string/LIVING_WITH_PARENTS</item>
        <item name="LIVING_WITH_NEIGHBORS">@string/LIVING_WITH_NEIGHBORS</item>
        <item name="LIVING_IN_DORMITORY">@string/LIVING_IN_DORMITORY</item>
        <item name="LIVING_WITH_SECOND_HALF">@string/LIVING_WITH_SECOND_HALF</item>
        <item name="LIVING_ALONE">@string/LIVING_ALONE</item>
    </string-array>
    <string name="LIVING_WITH_PARENTS">With parents</string>
    <string name="LIVING_WITH_NEIGHBORS">With neighbors</string>
    <string name="LIVING_IN_DORMITORY">In dormitory</string>
    <string name="LIVING_WITH_SECOND_HALF">With beloved</string>
    <string name="LIVING_ALONE">Alone</string>
    <string name="smoking">Smoking</string>
    <string name="IS_SMOKING_PERSON">Smoking</string>
    <string name="IS_NO_SMOKING_PERSON">No smoking</string>
    <string name="ANTI_SMOKING_PERSON">Smoking hater</string>
    <string name="SMOKING_IN_COMPANY_PERSON">Socialy smoking</string>
    <string name="SMOKE_ONE_AFTER_THE_OTHER_PERSON">Chain smoker</string>
    <string name="no_value">is not filled</string>
    <string-array name="language_level">
        <item>@string/no_value</item>
        <item>@string/low</item>
        <item>@string/awerage</item>
        <item>@string/fluent</item>
        <item>@string/native_s</item>
    </string-array>
    <string-array name="error_messages">
        <item name="no_favorites">You have no favorites yet</item>
        <item name="no_visitors">Sorry, you don\'t have visitors yet</item>
        <item name="no_interests">Sorry, there is no more interests in this category</item>
        <item name="no_messages">Sorry, you don\'t have messages yet</item>
        <item name="no_likes">Sorry, you don\'t have likes yet</item>
        <item name="no_nearby">Sorry, there in no Menemi users near</item>
        <item name="no_news">Sorry, there is no news yet</item>
    </string-array>
    <string name="low">Low</string>
    <string name="awerage">Awerage</string>
    <string name="fluent">Fluent</string>
    <string name="native_s">Native speaker</string>
    <string name="less">less %1$s cm </string>
    <string name="more">more %1$s cm</string>
    <string name="less_kg">less %1$s kg</string>
    <string name="more_kg">more %1$s kg</string>
    <string name="sm">%1$s cm</string>
    <string name="kg">%1$s kg</string>
    <string name="unit_sm">cm</string>
    <string name="unit_kg">kg</string>
    <string name="alone">Alone</string>
    <string name="in_relationship">In love</string>
    <string name="in_free_relationship">In an open relationship</string>
    <string-array name="relationship">
        <item>@string/no_value</item>
        <item>@string/alone</item>
        <item>@string/in_relationship</item>
        <item>@string/in_free_relationship</item>
    </string-array>
    <string name="gay_orientation">Gay</string>
    <string name="OPEN_MINDED">Open minded</string>
    <string name="getero_relationship">Getero</string>
    <string name="bi_relationship">Bi relationship</string>
    <string name="orientation">Orientation</string>
    <string name="NEVER_MAKE_KIDS">Never</string>
    <string name="SOMETIME_MAKE_KIDS">Maybe once</string>
    <string name="already_have">Already have</string>
    <string name="ADULT_KIDS">Adult kids</string>
    <string-array name="alco">
        <item>@string/no_value</item>
        <item>@string/NO_DRINKING_PERSON</item>
        <item>@string/no_case</item>
        <item>@string/drinking_person</item>
        <item>@string/in_company</item>
    </string-array>
    <string name="NO_DRINKING_PERSON">Not</string>
    <string name="no_case">In no case</string>
    <string name="drinking_person">Yes, of course!</string>
    <string name="in_company">Only with friends</string>
    <string name="nearby">Nearby</string>
    <string name="find_goals">Find goals:</string>
    <string name="find_new_friend">Find new friends</string>
    <string name="chat">Chat</string>
    <string name="sex">Sex</string>
    <string name="CALLBACK_URL">https://localhost:3000/auth/instagram/callback</string>
    <string name="CLIENT_SECRET">d2f22dd0c6004e2dab3ea4a42a97de72</string>
    <string name="CLIENT_ID">139c9a2739ae458696cb03defadbf186</string>
    <string name="APPLICATION_OK_ID">1248077568</string>
    <string name="PUBLICK_APPLICATION_OK_KEY">CBAICFGLEBABABABA</string>
    <string name="REDIRECT_URI">okauth://ok1248077568</string>
    <string name="update_info">Update info</string>
    <string name="update_info_failed">Failed to update the information. Check your Internet connection</string>
    <string name="info_is_updated">The information has been updated successfully</string>
    <string name="app_name">menemi</string>
    <string name="fb_button">F</string>
    <string name="vk_button">Vk</string>
    <string name="Ok_button">Ok</string>
    <string name="title_activity_login_activity">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="title_activity_person_page">PersonPage</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_opened">Open</string>
    <string name="drawer_closed">Closed</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="basic_info">Basic info</string>
    <string name="account">Account</string>
    <string name="account_preferences">Account Preferences</string>
    <string name="help_center">Help Center</string>
    <string name="about">About myself</string>
    <string name="iamheretoLabel">I want:</string>
    <string name="relationshipsLabel">Relations:</string>
    <string name="orientationLabel">Orientation:</string>
    <string name="appearanceLabel">Appearance:</string>
    <string name="smokingLabel">Smoking:</string>
    <string name="alcoLabel">Alcohol</string>
    <string name="gifts">Gifts</string>
    <string name="cry"><u>Complain</u></string>
    <string name="blocked_users">Blocked users</string>
    <string name="flike_header">Join the MINEMI party on Facebook</string>
    <string name="fav_text">You have not elect people. Maybe you will like someone in the People section?</string>
    <string name="fav_button">Find Elect</string>
    <string name="you_like_text">You have no one liked. Play love or will advance your profile to you quickly noticed!</string>
    <string name="you_like_button1">Play love</string>
    <string name="chooseLanguageLevel">Choose language level</string>
    <string name="you_like_button2">Add screenings</string>
    <string name="added_you_in_favorites">You Added to Favorites</string>
    <string name="increase_your_level">To increase the popularity</string>
    <string name="you_added_in_favorites">Your Favorites</string>
    <string name="more_in_favorites">More!</string>
    <string name="your_friend">Your friends</string>
    <string name="distance">Show distance</string>
    <string name="online_status">Show online status</string>
    <string name="public_search">Enable public search</string>
    <string name="bumped_into">Enable Bumped into</string>
    <string name="profile_sharing">Allow profile sharing</string>
    <string name="messages">Messages</string>
    <string name="profile_visitors">Profile visitors</string>
    <string name="liked_you">Liked you</string>
    <string name="matches">Matches</string>
    <string name="favorited_you">Favorited you</string>
    <string name="bumped_into_n">Bumped into</string>
    <string name="news">News</string>
    <string name="facebook">Facebook</string>
    <string name="g_plus">G+</string>
    <string name="instagram">Instagram</string>
    <string name="terms_and_conditions_summary">Terms and Conditions summary</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_in_about">Privacy</string>
    <string name="about_badoo">About Menemi</string>
    <string name="no_internet_message">Internet connection is lost.</string>
    <string name="change">Change</string>
    <string name="phone">Phone</string>
    <string name="verified">(verified)</string>
    <string name="photo_label">Photo</string>
    <string name="verified1">(verified)</string>
    <string name="vk">vkontakte</string>
    <string name="verify_do">(verify)</string>
    <string name="on">On</string>
    <string name="upload_photo_ok">Odnoklasniki</string>
    <string name="retry">Retry</string>
    <string name="connection_lost_n_please_check_your_internet_connection_n_and_try_again">Connection lost. \nPlease check your internet connection \nand try again</string>
</resources>