<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
                  android:orientation="vertical"
                  android:id="@+id/showDistanceButton"
                  style="@style/settings_theme">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distanceTextView"
            android:text="@string/distance"
            style="@style/main_text_for_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distanceOnOff"
            android:text="@string/on"/>

    </LinearLayout>
    <ImageView style="@style/settings_divider" />
    <LinearLayout
                  android:orientation="vertical"
                  android:id="@+id/onlineStatusButton"
                  style="@style/settings_theme">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onlineStatusTextView"
            android:text="@string/online_status"
            style="@style/main_text_for_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statusOnOff"
            android:text="On"/>

    </LinearLayout>
    <ImageView style="@style/settings_divider" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:id="@+id/showSearchButton"
                  style="@style/settings_theme">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showSearchTextView"
            android:text="@string/public_search"
            style="@style/main_text_for_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showSearchOnOff"
            android:text="On"/>

    </LinearLayout>
    <ImageView style="@style/settings_divider" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:id="@+id/bumpedInfoButton"
                  style="@style/settings_theme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bumpedIntoTextView"
            android:text="@string/bumped_into"
            style="@style/main_text_for_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bumpedIntoOnOff"
            android:text="On"/>

    </LinearLayout>
    <ImageView style="@style/settings_divider" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:id="@+id/profileSharingButton"
                  style="@style/settings_theme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profileSharingIntoTextView"
            android:text="@string/profile_sharing"
            style="@style/main_text_for_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profileSharingOnOff"
            android:text="On"/>

    </LinearLayout>
    <ImageView style="@style/settings_divider" />
</LinearLayout>



